[package]
name = "emerald-paratime"
version = "10.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"
resolver = "2"

[package.metadata.orc.release]
runtime-id = "000000000000000000000000000000000000000000000000e2eaa99fc008f87f"

[package.metadata.orc.test]
runtime-id = "00000000000000000000000000000000000000000000000072c8215e60d5bca7"

[dependencies]
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", rev = "398c7891716b7d315a62ff426cebca9d008210eb" }
module-evm = { git = "https://github.com/oasisprotocol/oasis-sdk", rev = "398c7891716b7d315a62ff426cebca9d008210eb", package = "oasis-runtime-sdk-evm" }

# Third party.
once_cell = "1.8.0"
