[package]
name = "emerald-paratime"
version = "11.0.0-testnet"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"
resolver = "2"

[package.metadata.orc.release]
runtime-id = "000000000000000000000000000000000000000000000000e2eaa99fc008f87f"

[package.metadata.orc.test]
runtime-id = "00000000000000000000000000000000000000000000000072c8215e60d5bca7"

[dependencies]
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.7.4" }
module-evm = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.7.4", package = "oasis-runtime-sdk-evm" }

# Third party.
once_cell = "1.8.0"
